# TimeLineBot

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram.drawio  main.cpp
processors/: WindowProcessor.cc  WindowProcessor.h
structures/: Timeline.cc  Timeline.h
